<resources>
    <string name="app_name">appDatosUsuarios</string>
    <string name="telefono">Telefono:</string>
    <string name="nombre_completo">Nombre completo:</string>
    <string name="descripcion_del_contacto">Descripcion del contacto</string>
    <string name="email">Email:</string>
    <string name="boton_Sig">Siguiente</string>
    <string name="confirmar_datos">Confirmar Datos</string>
    <string name="fecha">Fecha:</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="editar_datos">Editar Datos</string>
</resources>
