<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/tomaFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@id/editNombre"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="@+id/editNombre"
        app:layout_constraintTop_toTopOf="@+id/editNombre" />

    <EditText
        android:id="@+id/edTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/tomaFecha"
        app:layout_constraintTop_toBottomOf="@+id/tomaFecha"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/edTelefono"
        app:layout_constraintTop_toBottomOf="@id/edTelefono" />

    <EditText
        android:id="@+id/edDescContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripcion_del_contacto"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/edMail"
        app:layout_constraintTop_toBottomOf="@id/edMail" />

    <Button
        android:id="@+id/btnSegPantalla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickbtnSegPantalla"
        android:text="@string/boton_Sig"
        app:layout_constraintEnd_toStartOf="@id/edDescContacto"
        app:layout_constraintTop_toBottomOf="@id/edDescContacto" />

</androidx.constraintlayout.widget.ConstraintLayout>